# rs_control

./: .gitignore  CMakeLists.txt  README.md  README2.md  RS_MANUAL.md  package.xml  sine_wave_test.py  switch_to_can.py
MANUAL/: dual_controller_launch_guide.md
include/rs_control/: can_frame.h  low_pass_filter.h  protocol.h  rob_stride_motor.h  rs_lib.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rs_control/include/rs_control/: can_interface.h  protocol.h  rob_stride_motor.h
install/rs_control/include/rs_control/rs_control/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sine_wave_parameters.hpp
install/rs_control/include/rs_control/rs_control/msg/detail/: sine_wave_parameters__functions.c  sine_wave_parameters__rosidl_typesupport_fastrtps_cpp.hpp  sine_wave_parameters__rosidl_typesupport_introspection_cpp.hpp  sine_wave_parameters__struct.h  sine_wave_parameters__struct.hpp  sine_wave_parameters__type_support.c  sine_wave_parameters__type_support.cpp
install/rs_control/local/lib/python3.10/dist-packages/rs_control/: _rs_control_s.ep.rosidl_typesupport_introspection_c.c
install/rs_control/local/lib/python3.10/dist-packages/rs_control-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/rs_control/local/lib/python3.10/dist-packages/rs_control/msg/: __init__.py
install/rs_control/share/ament_index/resource_index/parent_prefix_path/: rs_control
install/rs_control/share/rs_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rs_control/share/rs_control/cmake/: ament_cmake_export_include_directories-extras.cmake  export_rs_control__rosidl_generator_cExport-noconfig.cmake  export_rs_control__rosidl_generator_cExport.cmake  export_rs_control__rosidl_generator_cppExport.cmake  export_rs_control__rosidl_generator_pyExport.cmake  export_rs_control__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rs_controlConfig.cmake  rs_control__rosidl_typesupport_cExport-noconfig.cmake  rs_control__rosidl_typesupport_cExport.cmake  rs_control__rosidl_typesupport_introspection_cExport-noconfig.cmake  rs_control__rosidl_typesupport_introspection_cExport.cmake  rs_control__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rs_control__rosidl_typesupport_introspection_cppExport.cmake
install/rs_control/share/rs_control/launch/: motor_checker.launch.py  motor_state_reader.launch.py
launch/: dual_controller_with_logging.launch.py
lib_references/: motor_config.cpp  motor_config.h  motor_control_test.cpp  robstride.cpp  robstride.h
log/: latest_build
msg/: MotorState.msg  SineWaveParameters.msg
src/: can_frame.cpp  can_interface.cpp  dual_controller_node.cpp  dual_motor_control_node.cpp  full_mit_controller_node.cpp  haptic_control_node.cpp  main_control_node.cpp  motor_checker_node.cpp  motor_state_reader_node.cpp  rob_stride_motor.cpp  rs_lib.cpp
